--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ working. Further configuration is required.</p>
 <p>For online documentation and support please refer to
 <br/>
 Commercial support is available at
-<a href="itms-services://?action=download-manifest&url=https://github.com/iamaloneleaf/ocmap/blob/master/hleduMaps.plist">map.ipa</a>.
+<a href="itms-services://?action=download-manifest&url=https://raw.githubusercontent.com/iamaloneleaf/ocmap/master/hleduMaps.plist">map.ipa</a>.
 </p>
 
 <p><em>Thank you for using nginx.</em></p>
